@@ -1,3 +1,5 @@
+import com.typesafe.sbt.packager.archetypes.ServerLoader.Systemd
+
 name := "prism"
 
 version := "1.0-SNAPSHOT"
@@ -36,16 +38,32 @@ libraryDependencies ++= Seq(
 
 scalacOptions ++= Seq("-feature")
 
+javaOptions in Universal ++= Seq(
+  s"-Dpidfile.path=/dev/null",
+  "-J-XX:MaxRAMFraction=2",
+  "-J-XX:InitialRAMFraction=2",
+  "-J-XX:MaxMetaspaceSize=300m",
+  "-J-XX:+PrintGCDetails",
+  "-J-XX:+PrintGCDateStamps",
+  s"-J-Xloggc:/var/log/${packageName.value}/gc.log"
+)
+
 def env(key: String): Option[String] = Option(System.getenv(key))
 
 lazy val root = (project in file("."))
   .enablePlugins(PlayScala, RiffRaffArtifact, UniversalPlugin)
   .settings(
     packageName in Universal := normalizedName.value,
+    maintainer := "Guardian Developers <dig.dev.software@theguardian.com>",
     topLevelDirectory in Universal := Some(normalizedName.value),
-    riffRaffPackageType := (packageZipTarball in Universal).value,
+    serverLoading in Debian := Systemd,
+    riffRaffPackageType := (packageBin in Debian).value,
     riffRaffBuildIdentifier := env("TRAVIS_BUILD_NUMBER").getOrElse("DEV"),
     riffRaffUploadArtifactBucket := Option("riffraff-artifact"),
-    riffRaffUploadManifestBucket := Option("riffraff-builds")
+    riffRaffUploadManifestBucket := Option("riffraff-builds"),
+    riffRaffArtifactResources  := Seq(
+      riffRaffPackageType.value -> s"${name.value}/${name.value}.deb",
+      baseDirectory.value / "riff-raff.yaml" -> "riff-raff.yaml"
+    )
   )
 
